--- a/src/tg-bot/appsettings.json
+++ b/src/tg-bot/appsettings.json
@@ -1,7 +1,12 @@
 {
+  "_Telegram": {
+    "Token": ""
+  },
   "Backend": {
     "BackendUrl": "https://localhost:7222",
     "FrontendUrl": "https://localhost:5173",
-    "AuthorizationHeaderName": "X-BOT-KEY"
+    "Url": "https://localhost:7222",
+    "AuthorizationHeaderName": "X-BOT-KEY",
+    "_Token": ""
   }
 }
