--- a/src/backend/Titeenipeli.Bot/Titeenipeli.Bot.csproj
+++ b/src/backend/Titeenipeli.Bot/Titeenipeli.Bot.csproj
@@ -19,4 +19,10 @@
         <ProjectReference Include="..\Titeenipeli.Common\Titeenipeli.Common.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    
 </Project>
