--- a/src/backend/Titeenipeli.Bot/Titeenipeli.Bot.csproj
+++ b/src/backend/Titeenipeli.Bot/Titeenipeli.Bot.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <UserSecretsId>7c4da22e-11ad-4ef8-855d-68f36f0c6d8c</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
