--- a/src/backend/Titeenipeli.Bot/appsettings.json
+++ b/src/backend/Titeenipeli.Bot/appsettings.json
@@ -2,5 +2,6 @@
   "Backend": {
     "BackendUrl": "https://localhost:7222",
     "FrontendUrl": "https://localhost:5173",
+    "AuthorizationHeaderName": "X-BOT-KEY",
   }
 }
