--- a/infra/pulumi/kube/values/traefik/values.yaml
+++ b/infra/pulumi/kube/values/traefik/values.yaml
@@ -34,3 +34,62 @@ service:
     service.beta.kubernetes.io/azure-pip-name: "{{ azure_resource_group }}"
     service.beta.kubernetes.io/azure-dns-label-name: "{{ azure_resource_group }}"
     service.beta.kubernetes.io/azure-allowed-ip-ranges: "{{ ip_range | join(',') }}"
+
+ingressRoute:
+  dashboard:
+    enabled: false
+additionalArguments:
+- "--api.insecure=true"
+extraObjects:
+  - apiVersion: v1
+    kind: Service
+    metadata:
+      name: traefik-api
+    spec:
+      type: ClusterIP
+      selector:
+        app.kubernetes.io/name: traefik
+        app.kubernetes.io/instance: traefik-default
+      ports:
+      - port: 8080
+        name: traefik
+        targetPort: 9000
+        protocol: TCP
+
+  - apiVersion: v1
+    kind: Secret
+    metadata:
+      name: traefik-dashboard-auth-secret
+    type: kubernetes.io/basic-auth
+    stringData:
+      username: admin
+      password: changeme
+
+  - apiVersion: traefik.io/v1alpha1
+    kind: Middleware
+    metadata:
+      name: traefik-dashboard-auth
+    spec:
+      basicAuth:
+        secret: traefik-dashboard-auth-secret
+
+  - apiVersion: networking.k8s.io/v1
+    kind: Ingress
+    metadata:
+      name: traefik-dashboard
+      annotations:
+        traefik.ingress.kubernetes.io/router.entrypoints: websecure
+        traefik.ingress.kubernetes.io/router.middlewares: default-traefik-dashboard-auth@kubernetescrd
+        external-dns.alpha.kubernetes.io/hostname: traefik.test.cluster2017.fi
+    spec:
+      rules:
+      - host: traefik-dashboard.example.com
+        http:
+          paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: traefik-api
+                port:
+                  name: traefik
