#289: Add full support for scores and rate limiting

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
         "compile-grpc-components": "npx protoc --proto_path=../protobuf --ts_out=src/generated/grpc --ts_opt=ts_nocheck ../protobuf/components/*/*.proto",
         "compile-grpc-services": "npx protoc --proto_path=../protobuf --ts_out=src/generated/grpc --ts_opt=ts_nocheck ../protobuf/*/*.proto",
         "lint": "eslint './**/*.{ts,tsx}' --report-unused-disable-directives --max-warnings 0 --ignore-pattern 'src/generated/*'",
+        "prettier": "prettier . --write",
         "preview": "vite preview"
     },
     "dependencies": {
