#285 Added new env value to example file

--- a/src/.env.example
+++ b/src/.env.example
@@ -4,6 +4,8 @@
 JWT_SECRET=256_CHARACTER_LENGTH_JWT_SECRET
 JWT_ENCRYPTION=32_CHARACTER_LENGTH_ENCRYPTION_KEY
 
+CERTIFICATE_PASSWORD=PASSWORD_FOR_PFX_CERTIFICATE
+
 POSTGRES_DB=DATABASE_NAME
 POSTGRES_USER=DATABASE_USER
 POSTGRES_PASSWORD=DATABASE_PASSWORD
