--- a/src/frontend/nginx.conf
+++ b/src/frontend/nginx.conf
@@ -7,7 +7,10 @@ http {
         root /usr/share/nginx/html;
         index index.html;
         location / {
-            try_files $uri $uri/ /index.html;
+            # Remove src/ from static assets paths
+            # This is a hack to resolve "./src/assets" paths to "/assets" 
+            rewrite ^/src(.*)$ $1 last;
+            try_files $uri /index.html;
         }
 
         # Fixes for some browser load errors
