--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -50,7 +50,8 @@
         "typescript-eslint": "^7.10.0",
         "vite": "^5.2.14",
         "vite-plugin-http2-proxy": "^0.4.3",
-        "vite-plugin-mkcert": "^1.17.5"
+        "vite-plugin-mkcert": "^1.17.5",
+        "vite-plugin-static-copy": "^2.1.0"
     },
     "proxy": "http://localhost:8080"
 }
