--- a/src/backend/Titeenipeli/Dockerfile
+++ b/src/backend/Titeenipeli/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
+EXPOSE 80 443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
@@ -20,4 +20,5 @@ RUN dotnet publish "Titeenipeli.csproj" -c $BUILD_CONFIGURATION -o /app/publish 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+COPY backend/Titeenipeli/Resources Resources/
 ENTRYPOINT ["dotnet", "Titeenipeli.dll"]
