--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,19 +1,38 @@
 ﻿services:
-  titeenipeli:
+  backend:
     image: titeenipeli:latest
     build:
       context: .
       dockerfile: backend/Titeenipeli/Dockerfile
     environment:
-      - ASPNETCORE_ENVIRONMENT=Production
-      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=80
+      - ASPNETCORE_HTTPS_PORTS=443
       - JWT__Secret=${JWT_SECRET}
       - JWT__Encryption=${JWT_ENCRYPTION}
       - SQLCONNSTR_Database=Server=db;Port=5432;Userid=${POSTGRES_USER};Timeout=15;Database=${POSTGRES_DB};Password=${POSTGRES_PASSWORD};
-    ports:
-      - 8080:8080
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=${CERTIFICATE_PASSWORD}
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+    volumes:
+      # Make sure that owner of the .pfx file is 1654:1654
+      - ~/.aspnet/https:/https:ro
     depends_on:
       - db
+
+  frontend:
+    image: frontend:latest
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
+
+  proxy:
+    image: proxy:latest
+    build:
+      context: proxy
+      dockerfile: Dockerfile
+    ports:
+      - 8080:80
+      - 8443:443
 
   db:
     image: postgres:16
