#285 Containerize Titeenipeli.Bot

--- a/src/.env.example
+++ b/src/.env.example
@@ -9,3 +9,6 @@ CERTIFICATE_PASSWORD=PASSWORD_FOR_PFX_CERTIFICATE
 POSTGRES_DB=DATABASE_NAME
 POSTGRES_USER=DATABASE_USER
 POSTGRES_PASSWORD=DATABASE_PASSWORD
+
+BOT_TOKEN=32_CHARACTERS_LONG_SECRET
+TELEGRAM_TOKEN=TELEGRAM_TOKEN
