#285 Recursively include from Resources directory

--- a/src/backend/Titeenipeli/Titeenipeli.csproj
+++ b/src/backend/Titeenipeli/Titeenipeli.csproj
@@ -37,7 +37,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Update="Resources\Images\Background.jpg">
+        <None Update="Resources\**\*">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
