--- a/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
+++ b/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: wildcard
-  namespace : cert-manager
+  name: wildcard-tls
+  namespace: traefik
 spec:
-  secretName: wildcard
+  secretName: wildcard-tls
   issuerRef:
     name: letsencrypt-staging
     kind: ClusterIssuer
-  commonName: '{{ .Values.hostedZoneName }}'
+  commonName: "{{ .Values.hostedZoneName }}"
   dnsNames:
-  - "{{ .Values.hostedZoneName }}"
-  - "*.{{ .Values.hostedZoneName }}"
+    - "{{ .Values.hostedZoneName }}"
+    - "*.{{ .Values.hostedZoneName }}"
