disabled diff for kube pulumi

--- a/.github/workflows/pulumi-go-infra-kube.yaml
+++ b/.github/workflows/pulumi-go-infra-kube.yaml
@@ -56,6 +56,6 @@ jobs:
           work-dir: ${{ env.working-dir }}
           comment-on-pr: true
           comment-on-summary: true
-          diff: true
+          diff: false
         env:
           ARM_USE_MSI: true
