--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -37,7 +37,7 @@ jobs:
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
-          context: ./src/
+          context: src/
           file: backend/Titeenipeli/Dockerfile
           push: false
           tags: titeenipeli:latest
@@ -46,7 +46,7 @@ jobs:
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
-          context: ./src/
+          context: src/
           file: frontend/Dockerfile
           push: false
           tags: frontend:latest
@@ -55,7 +55,7 @@ jobs:
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
-          context: ./src/backend
+          context: src/backend
           file: Titeenipeli.Bot/Dockerfile
           push: false
           tags: titeenipeli.bot:latest
