--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -39,7 +39,7 @@ jobs:
         with:
           context: ./src/
           file: ./src/backend/Titeenipeli/Dockerfile
-          push: false
+          push: true
           tags: titeenipeli:latest
 
       - name: Test build frontend
@@ -48,7 +48,7 @@ jobs:
         with:
           context: ./src/
           file: ./src/frontend/Dockerfile
-          push: false
+          push: true
           tags: frontend:latest
 
       - name: Test build titeenipeli bot
@@ -57,7 +57,7 @@ jobs:
         with:
           context: ./src/backend
           file: ./src/backend/Titeenipeli.Bot/Dockerfile
-          push: false
+          push: true
           tags: titeenipeli.bot:latest
 
       - name: Build and push backend
@@ -66,7 +66,7 @@ jobs:
         with:
           context: ./src/
           file: ./src/backend/Titeenipeli/Dockerfile
-          push: false
+          push: true
           tags: titeenipeli:latest
 
       - name: Build and push frontend
@@ -75,7 +75,7 @@ jobs:
         with:
           context: ./src/
           file: ./src/frontend/Dockerfile
-          push: false
+          push: true
           tags: frontend:latest
 
       - name: Build and push titeenipeli bot
@@ -84,5 +84,5 @@ jobs:
         with:
           context: ./src/backend
           file: ./src/backend/Titeenipeli.Bot/Dockerfile
-          push: false
+          push: true
           tags: titeenipeli.bot:latest
