--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -11,6 +11,9 @@ on:
     branches:
       - main
 
+env:
+  acr_name: titeenipelitacr.azurecr.io
+
 jobs:
   docker:
     name: Run build
@@ -23,7 +26,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: titeenipelitacr.azurecr.io
+          registry: ${{ env.acr_name }}
           username: ${{ secrets.AZURE_SP_ACR_CLIENT_ID }}
           password: ${{ secrets.AZURE_SP_ACR_PASSWORD }}
 
@@ -33,15 +36,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Test build backend
-        if: github.ref != 'refs/heads/main'
-        uses: docker/build-push-action@v6
-        with:
-          context: ./src/
-          file: ./src/backend/Titeenipeli/Dockerfile
-          push: true
-          tags: titeenipeli:latest
-
       - name: Test build frontend
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v6
@@ -50,6 +44,15 @@ jobs:
           file: ./src/frontend/Dockerfile
           push: true
           tags: frontend:latest
+
+      - name: Test build backend
+        if: github.ref != 'refs/heads/main'
+        uses: docker/build-push-action@v6
+        with:
+          context: ./src/
+          file: ./src/backend/Titeenipeli/Dockerfile
+          push: true
+          tags: titeenipeli:latest
 
       - name: Test build titeenipeli bot
         if: github.ref != 'refs/heads/main'
@@ -86,3 +89,11 @@ jobs:
           file: ./src/backend/Titeenipeli.Bot/Dockerfile
           push: true
           tags: titeenipeli.bot:latest
+
+      - name: Purge old images only keep 3 newest
+        if: github.ref == 'refs/heads/main'
+        run: |
+          acr purge \
+              --registry ${{env.acr_name }} \
+              --filter ".*:.*" \
+              --keep 3
