#342 Added in memory map provider to reduce database calls

--- a/src/backend/Titeenipeli/Titeenipeli.csproj
+++ b/src/backend/Titeenipeli/Titeenipeli.csproj
@@ -34,6 +34,7 @@
     <ItemGroup>
         <ProjectReference Include="..\Titeenipeli.Common\Titeenipeli.Common.csproj"/>
         <ProjectReference Include="../Titeenipeli.Grpc/Titeenipeli.Grpc.csproj"/>
+        <ProjectReference Include="..\Titeenipeli.InMemoryMapProvider\Titeenipeli.InMemoryMapProvider.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
