--- a/src/openapi/components/schemas/powerupActivation.yaml
+++ b/src/openapi/components/schemas/powerupActivation.yaml
@@ -1,6 +1,7 @@
 type: object
 properties:
   id:
+    description: "Unique identifier for the powerUp"
     type: int
   location:
     $ref: "./relativeCoordinate.yaml"
