--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,6 +22,7 @@
         "@protobuf-ts/runtime-rpc": "^2.9.4",
         "@tanstack/react-query": "^5.59.16",
         "axios": "^1.7.4",
+        "pixi-filters": "^5.3.0",
         "pixi-viewport": "^5.0.3",
         "pixi.js": "^7.4.2",
         "react": "^18.3.1",
