#398 Added complete support for changing fog of war

--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -16,6 +16,7 @@
   },
   "Game": {
     "FogOfWarDistance": 2,
+    "MaxFogOfWarDistance": 5,
     "Width": 100,
     "Height": 100,
     "SpawnAreasPerGuild": 2,
