#185: WIP helm chart

--- a/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
+++ b/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
@@ -12,3 +12,10 @@ spec:
   dnsNames:
     - "{{ .Values.hostedZoneName }}"
     - "*.{{ .Values.hostedZoneName }}"
+  keystores:
+    pkcs12:
+      create: true
+      passwordSecretRef:
+        name: example-com-tls-keystore
+        key: password
+      profile: Modern2023
