--- a/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
+++ b/infra/pulumi/kube/helm/certmanager-certs/templates/cert.yaml
@@ -12,3 +12,42 @@ spec:
   dnsNames:
     - "{{ .Values.hostedZoneName }}"
     - "*.{{ .Values.hostedZoneName }}"
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: selfsigned-issuer
+  namespace: cert-manager
+spec:
+  selfSigned: {}
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: titeenipeli-cert-self-sign
+  namespace: cert-manager
+spec:
+  isCA: true
+  secretName: titeenipeli-cert-self-sign
+  privateKey:
+    algorithm: ECDSA
+    size: 256
+  issuerRef:
+    name: selfsigned-issuer
+    kind: ClusterIssuer
+    group: cert-manager.io
+  commonName: {{ .Values.titeenipeliBackendName }}.{{ .Values.titeenipeliNS }}.svc
+  nameConstraints:
+    critical: true
+    permitted:
+      ipRanges: ["10.0.0.0/16"]
+  dnsNames:
+    - {{ .Values.titeenipeliBackendName }}.{{ .Values.titeenipeliNS }}.svc
+    - {{ .Values.titeenipeliBackendName }}.{{ .Values.titeenipeliNS }}.svc.cluster.local
+  secretTemplate:
+    annotations:
+      reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "traefik,{{ .Values.titeenipeliNS }}"
+      reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "traefik,{{ .Values.titeenipeliNS }}"
+
