--- a/infra/pulumi/kube/helm/titeenipeli/templates/cert.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/cert.yaml
@@ -2,14 +2,18 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: {{ include "titeenipeli.name" . }}-cert
-  labels:
-    {{- include "titeenipeli.labels" . | indent 4 }}
+  labels: 
+    {{- include "titeenipeli.labels" . | nindent 4 }}
 spec:
   secretName: {{ include "titeenipeli.name" . }}-cert
+  privateKey:
+    algorithm: RSA
+    encoding: PKCS1
+    size: 2048 
   issuerRef:
     name: letsencrypt-staging
     kind: ClusterIssuer
   commonName: "{{ .Values.hostedZoneName }}"
   dnsNames:
     - "{{ .Values.hostedZoneName }}"
-    - "*.{{ .Values.hostedZoneName }}"
+    - "*.{{ .Values.hostedZoneName }}"  
