--- a/infra/pulumi/kube/helm/titeenipeli/templates/postgres.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/postgres.yaml
@@ -2,7 +2,10 @@ apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
   name: {{ include "titeenipeli.name" . }}-cluster
-  labels: {{- include "titeenipeli.labels" . | indent 4 }}
+  labels: {{- include "titeenipeli.labels" . | nindent 4 }}
+  annotations:
+    "helm.sh/hook": pre-install
+    "helm.sh/hook-weight": "-5"
 spec:
   instances: 3
   imageName: ghcr.io/cloudnative-pg/postgresql:16
@@ -11,14 +14,15 @@ spec:
     enablePodMonitor: true
   storage:
     size: 10Gi
+  managed:
+    roles:
+    - name: app
+      createdb: true
+      login: true
   enableSuperuserAccess: true
   postgresql:
     parameters:
       shared_buffers: "256MB"
       max_connections: "100"
-  bootstrap:
-    initdb:
-      database: {{ .Values.databaseName }}
-      owner: {{ .Values.databaseUserName }}
-      secret:
-        name: my-postgres-secret
+
+  # TODO: backup to cloud
