--- a/infra/pulumi/kube/helm/titeenipeli/templates/cert.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/cert.yaml
@@ -11,7 +11,7 @@ spec:
     encoding: PKCS1
     size: 2048 
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt-production
     kind: ClusterIssuer
   commonName: "{{ .Values.hostedZoneName }}"
   dnsNames:
