Added SatelliteResourceLanguages to projects to avoid satellite languages files

--- a/src/backend/Titeenipeli.Common/Titeenipeli.Common.csproj
+++ b/src/backend/Titeenipeli.Common/Titeenipeli.Common.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Titeenipeli.Common</RootNamespace>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
 
     <ItemGroup>
