--- a/src/backend/Titeenipeli.Tests/Titeenipeli.Tests.csproj
+++ b/src/backend/Titeenipeli.Tests/Titeenipeli.Tests.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
-
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
