--- a/infra/pulumi/kube/helm/titeenipeli/templates/deployment.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "titeenipeli.frontendLabels" . | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: 5
   selector:
     matchLabels:
       {{- include "titeenipeli.frontendSelectorLabels" . | nindent 6 }}
@@ -15,8 +15,9 @@ spec:
         {{- include "titeenipeli.frontendSelectorLabels" . | nindent 8 }}
     spec:
       containers:
-        - image: titeenipelitacr.azurecr.io/frontend:latest
+        - image: titeenipelitacr.azurecr.io/frontend:v0.1
           name: frontend
+          imagePullPolicy: Always
       restartPolicy: Always
 ---
 apiVersion: apps/v1
