--- a/infra/pulumi/foundation/helm/opentelemetry-collector/values.yaml
+++ b/infra/pulumi/foundation/helm/opentelemetry-collector/values.yaml
@@ -1,9 +1,62 @@
-config:
-  exporters:
-    otlp:
-      endpoint: lgtm-distributed-tempo-distributor.monitoring.svc:4317
 image:
   repository: otel/opentelemetry-collector-k8s
 command:
   name: otelcol-k8s
-mode: daemonset
+mode: deployment
+
+config:
+  exporters:
+    otlp:
+      endpoint: lgtm-distributed-tempo-distributor.monitoring.svc:4317
+      tls:
+        insecure: true
+
+    otlphttp:
+      endpoint: http://lgtm-distributed-loki-distributor.monitoring.svc:3100/loki/api/v1/push
+
+    debug: {}
+
+  extensions:
+    health_check:
+      endpoint: ${env:MY_POD_IP}:13133
+
+  processors:
+    batch: {}
+    memory_limiter:
+      check_interval: 5s
+      limit_percentage: 80
+      spike_limit_percentage: 25
+
+  receivers:
+    otlp:
+      protocols:
+        grpc:
+          endpoint: ${env:MY_POD_IP}:4317
+        http:
+          endpoint: ${env:MY_POD_IP}:4318
+
+  service:
+    telemetry:
+      metrics:
+        address: ${env:MY_POD_IP}:8888
+    extensions:
+      - health_check
+    pipelines:
+      logs:
+        exporters:
+          - otlphttp
+          - debug
+        processors:
+          - memory_limiter
+          - batch
+        receivers:
+          - otlp
+      traces:
+        exporters:
+          - otlp
+          - debug
+        processors:
+          - memory_limiter
+          - batch
+        receivers:
+          - otlp
