--- a/infra/pulumi/kube/helm/titeenipeli/templates/deployment.yaml
+++ b/infra/pulumi/kube/helm/titeenipeli/templates/deployment.yaml
@@ -50,6 +50,8 @@ spec:
               value: /https/tls.key
             - name: ASPNETCORE_Kestrel__Certificates__Default__Path
               value: /https/tls.crt
+            - name: OpenTelemetryEndpoint
+              value: opentelemetry-collector.monitoring.svc:4318
             - name: Bot__Token
               valueFrom:
                 secretKeyRef:
@@ -87,14 +89,20 @@ spec:
           image: titeenipelitacr.azurecr.io/backend:latest
           name: backend
           volumeMounts:
-            - mountPath: /https
-              name: certs
+            - name: certs
+              mountPath: /https
               readOnly: true
+            - name: config-volume
+              mountPath: /app/appsettings.json
+              subPath: appsettings.json
       restartPolicy: Always
       volumes:
         - name: certs
           secret:
             secretName: {{ include "titeenipeli.name" . }}-cert-self-sign
+        - name: config-volume
+          configMap:
+            name: {{ include "titeenipeli.name" . }}-config
 ---
 apiVersion: apps/v1
 kind: Deployment
