--- a/src/backend/Titeenipeli/appsettings.json
+++ b/src/backend/Titeenipeli/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "OpenTelemetryEndpoint": "localhost:4318",
+  "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
   "JWT": {
     "ValidAudience": "http://localhost:5129",
     "ValidIssuer": "http://localhost:5129",
