--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -18,8 +18,19 @@ jobs:
   docker:
     name: Run build
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+          - linux/amd64
+          - linux/arm64
 
     steps:
+      - name: Prepare
+        run: |
+          platform=${{ matrix.platform }}
+          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+
       - name: Checkout
         uses: actions/checkout@v4
 
@@ -37,6 +48,7 @@ jobs:
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
+          platforms: ${{ matrix.platform }}
           context: ./src/
           file: ./src/frontend/Dockerfile
           push: false
@@ -46,6 +58,7 @@ jobs:
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
+          platforms: ${{ matrix.platform }}
           context: ./src/
           file: ./src/backend/Titeenipeli/Dockerfile
           push: false
@@ -55,6 +68,7 @@ jobs:
         if: github.ref != 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
+          platforms: ${{ matrix.platform }}
           context: ./src/backend
           file: ./src/backend/Titeenipeli.Bot/Dockerfile
           push: false
@@ -64,6 +78,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
+          platforms: ${{ matrix.platform }}
           context: ./src/
           file: ./src/backend/Titeenipeli/Dockerfile
           push: true
@@ -73,6 +88,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
+          platforms: ${{ matrix.platform }}
           context: ./src/
           file: ./src/frontend/Dockerfile
           push: true
@@ -82,6 +98,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v6
         with:
+          platforms: ${{ matrix.platform }}
           context: ./src/backend
           file: ./src/backend/Titeenipeli.Bot/Dockerfile
           push: true
